# llm_stock_report

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  daily_cn.yml  daily_hk.yml  daily_us.yml  deploy_pages.yml  weekly_retrain.yml
app/common/: config.py  decision_policy.py  http_retry.py  logging.py  schemas.py
app/data/: fetch_cn.py  fetch_hk.py  fetch_us.py  history_store.py  normalize.py
app/features/: technical.py
app/jobs/: export_case.py  run_report.py  run_retrain.py
app/llm/: base.py  factory.py  gemini_client.py  ollama_client.py  openai_client.py  prompts.py  report_reasoner.py
app/model/: predictor.py  qlib_data_builder.py  registry.py  trainer.py
app/news/: aggregator.py  brave_client.py  (+1 more)
config/: report.yaml  universe.yaml
docs/: full-guide.md  full-guide_EN.md  github-actions-setup.md  github-actions-setup_EN.md
pages_data/: cases_index.json
scripts/: build_pages.py
site_dist_test/: cases.html  docs.html  index.html
tests/: test_build_pages.py  test_config_limit.py  test_daily_lookback_metrics.py  test_export_case.py  test_fetch_cn_fallback.py  test_history_store.py  test_http_retry.py  test_llm_clients.py  test_llm_factory.py  test_llm_json_parse.py  test_market_overview.py  test_market_reasoner_fallback.py  test_model_registry.py  test_news_fallback.py  test_openai_retry.py  test_predictor.py  test_prompt_quality.py  test_report_language.py  test_run_report_integration.py  test_splitter.py  test_stock_reasoner_fallback.py  test_trainer_metadata.py  test_universe_and_hk.py
(+309 files in other folders)
